--- a/GPT-Free Zone/GPT-Free Zone.csproj
+++ b/GPT-Free Zone/GPT-Free Zone.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsonentsVowels.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="wordFrequencyCounter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
