--- a/GPT-Free Zone/GPT-Free Zone.csproj
+++ b/GPT-Free Zone/GPT-Free Zone.csproj
@@ -4,6 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+      <LangVersion>8.0</LangVersion>
     <ProjectGuid>{2C87CAC8-27C8-4412-B71B-F99501BD75DA}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>GPT_Free_Zone</RootNamespace>
@@ -47,6 +48,7 @@
     <Compile Include="fizzbuzz.cs" />
     <Compile Include="ifElseConversion.cs" />
     <Compile Include="letterFrequencyCounter.cs" />
+    <Compile Include="PetData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserManagement.cs" />
